--- a/Run_Trained_Agent.ipynb
+++ b/Run_Trained_Agent.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,23 @@
     "    agent.qnetwork_local.load_state_dict(checkpoint['state_dict'])\n",
     "    \n",
     "    return agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/chuqui/Fernando/DRL/Navigation_Project-Banannas_Collector\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
    ]
   },
   {
@@ -132,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 23.00\n"
+      "Score: 22.00\n"
      ]
     }
    ],
@@ -347,9 +364,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "drlnd",
+   "display_name": "dqn_bca",
    "language": "python",
-   "name": "drlnd"
+   "name": "dqn_bca"
   },
   "language_info": {
    "codemirror_mode": {
