--- a/Run_Trained_Agent.ipynb
+++ b/Run_Trained_Agent.ipynb
@@ -4,15 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Navigation\n",
+    "# Navigate and pick the roghts bananas!\n",
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
-    "\n",
-    "### 1. Start the Environment\n",
-    "\n",
-    "We begin by importing some necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "In this notebook, you can run trainend agent on the Banana Collector environment and see their performance in the Unity's visual interface."
    ]
   },
   {
@@ -25,7 +21,9 @@
     "import numpy as np\n",
     "from collections import deque\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import torch\n",
+    "%matplotlib inline\n",
+    "from dqn_agent import Agent"
    ]
   },
   {
@@ -51,72 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from collections import OrderedDict,deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dqn_agent import Agent\n",
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Loading the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_trained_agent(filepath):\n",
-    "    checkpoint = torch.load(filepath)\n",
-    "    agent = Agent(\n",
-    "                  checkpoint['state_size'],\n",
-    "                  checkpoint['action_size'],\n",
-    "                  checkpoint['hidden_layers'],\n",
-    "                  checkpoint['p'],\n",
-    "                  checkpoint['seed'])\n",
-    "\n",
-    "    agent.qnetwork_local.load_state_dict(checkpoint['state_dict'])\n",
-    "    \n",
-    "    return agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/chuqui/Fernando/DRL/Navigation_Project-Banannas_Collector\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,45 +91,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score: 22.00\n"
-     ]
-    }
-   ],
    "source": [
-    "# Instantiate an agent with an already trained Q-Network\n",
-    "agent = load_trained_agent('checkpoint.pth')\n",
-    "\n",
-    "env_info = env.reset(train_mode=False)[brain_name]\n",
-    "score = 0\n",
-    "while True:\n",
-    "    state = env_info.vector_observations[0]  # get the current state\n",
-    "    action = agent.act(state)\n",
-    "    env_info = env.step(action)[brain_name]        # send the action to the environment\n",
-    "    state = env_info.vector_observations[0]        # get the next state\n",
-    "    reward = env_info.rewards[0]                   # get the reward\n",
-    "    done = env_info.local_done[0]                  # see if episode has finished\n",
-    "    score += reward\n",
-    "    if done:\n",
-    "        break\n",
-    "\n",
-    "print('Score: {:.2f}'.format(score))"
+    "## Loading the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_agent():\n",
+    "def load_trained_agent(filepath):\n",
+    "    checkpoint = torch.load(filepath)\n",
+    "    agent = Agent(\n",
+    "                  checkpoint['state_size'],\n",
+    "                  checkpoint['action_size'],\n",
+    "                  checkpoint['hidden_layers'],\n",
+    "                  checkpoint['p'],\n",
+    "                  checkpoint['seed'])\n",
+    "\n",
+    "    agent.qnetwork_local.load_state_dict(checkpoint['state_dict'])\n",
+    "    \n",
+    "    return agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate an agent with an already trained Q-Network, using DQN\n",
+    "dqn_agent = load_trained_agent('./saved_models/dqn_agent_model.pth')\n",
+    "# Instantiate an agent with an already trained under Double DQN premises\n",
+    "double_dqn_agent = load_trained_agent('./saved_models/dqn_agent_model.pth')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation\n",
+    "\n",
+    "Now the trained agents perform in the visual environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_agent(agent):\n",
+    "    \"\"\"Shows the performance of an agent over Banana's Collector visula environment and returns the scored achieved\"\"\"\n",
     "    env_info = env.reset(train_mode=False)[brain_name]\n",
     "    score = 0\n",
     "    while True:\n",
@@ -213,152 +161,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe the performance of the trained DQN agent"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[11.0,\n",
-       " 7.0,\n",
-       " 22.0,\n",
-       " 9.0,\n",
-       " 12.0,\n",
-       " 17.0,\n",
-       " 10.0,\n",
-       " 13.0,\n",
-       " 14.0,\n",
-       " 14.0,\n",
-       " 16.0,\n",
-       " 5.0,\n",
-       " 14.0,\n",
-       " 16.0,\n",
-       " 13.0,\n",
-       " 0.0,\n",
-       " 19.0,\n",
-       " 12.0,\n",
-       " 9.0,\n",
-       " 11.0,\n",
-       " 11.0,\n",
-       " 9.0,\n",
-       " 17.0,\n",
-       " 21.0,\n",
-       " 11.0,\n",
-       " 5.0,\n",
-       " 2.0,\n",
-       " 0.0,\n",
-       " 9.0,\n",
-       " 17.0,\n",
-       " 13.0,\n",
-       " 0.0,\n",
-       " 4.0,\n",
-       " 4.0,\n",
-       " 11.0,\n",
-       " 14.0,\n",
-       " 17.0,\n",
-       " 18.0,\n",
-       " 28.0,\n",
-       " 5.0,\n",
-       " 15.0,\n",
-       " 11.0,\n",
-       " 3.0,\n",
-       " 13.0,\n",
-       " 5.0,\n",
-       " 4.0,\n",
-       " 2.0,\n",
-       " 13.0,\n",
-       " 15.0,\n",
-       " 9.0,\n",
-       " 4.0,\n",
-       " 15.0,\n",
-       " 12.0,\n",
-       " 18.0,\n",
-       " 9.0,\n",
-       " 17.0,\n",
-       " 16.0,\n",
-       " 7.0,\n",
-       " 4.0,\n",
-       " 16.0,\n",
-       " 0.0,\n",
-       " 13.0,\n",
-       " 13.0,\n",
-       " 11.0,\n",
-       " 9.0,\n",
-       " 14.0,\n",
-       " 16.0,\n",
-       " 17.0,\n",
-       " 16.0,\n",
-       " 10.0,\n",
-       " 4.0,\n",
-       " 16.0,\n",
-       " 18.0,\n",
-       " 8.0,\n",
-       " 18.0,\n",
-       " 3.0,\n",
-       " 16.0,\n",
-       " 12.0,\n",
-       " 9.0,\n",
-       " 21.0,\n",
-       " 13.0,\n",
-       " 13.0,\n",
-       " 11.0,\n",
-       " 14.0,\n",
-       " 2.0,\n",
-       " 3.0,\n",
-       " 1.0,\n",
-       " 14.0,\n",
-       " 18.0,\n",
-       " 21.0,\n",
-       " 20.0,\n",
-       " 21.0,\n",
-       " 12.0,\n",
-       " 2.0,\n",
-       " 0.0,\n",
-       " 5.0,\n",
-       " 11.0,\n",
-       " 8.0,\n",
-       " 4.0,\n",
-       " 1.0]"
+       "21.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hundred_runs = [run_agent() for i in range(100)]\n",
-    "hundred_runs"
+    "run_agent(dqn_agent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe the performance of the trained Double DQN agent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28.0"
+       "21.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.max(hundred_runs)"
+    "run_agent(double_dqn_agent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When finished you can close the environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#env.close()"
+    "env.close()"
    ]
   }
  ],
