--- a/Run_Trained_Agent.ipynb
+++ b/Run_Trained_Agent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Navigate and pick the roghts bananas!\n",
+    "# Navigate and pick the rights bananas!\n",
     "\n",
     "---\n",
     "\n",
